# api-client

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  api-client.code-workspace  build.bat  build.ps1  build.sh
.github/workflows/: doxygen.yml
docs/: _r_e_a_d_m_e_8md.html  annotated.html  api__bridge_8cpp.html  api__bridge_8cpp__incl.dot  api__bridge_8cpp__incl.map  api__bridge_8cpp__incl.md5  api__bridge_8h.html  api__bridge_8h__dep__incl.map  api__bridge_8h__dep__incl.md5  api__bridge_8h__incl.dot  api__bridge_8h__incl.map  api__bridge_8h__incl.md5  api__bridge_8h_source.html  api__client_8cpp.html  api__client_8cpp__incl.dot  api__client_8cpp__incl.map  api__client_8cpp__incl.md5  api__client_8h.html  api__client_8h__dep__incl.map  api__client_8h__dep__incl.md5  api__client_8h__incl.dot  api__client_8h__incl.map  api__client_8h__incl.md5  api__client_8h_source.html  api__result__types_8cpp.html  api__result__types_8cpp__incl.dot  api__result__types_8cpp__incl.map  api__result__types_8cpp__incl.md5  api__result__types_8h.html  api__result__types_8h__dep__incl.dot  api__result__types_8h__dep__incl.map  api__result__types_8h__dep__incl.md5  api__result__types_8h__incl.dot  api__result__types_8h__incl.map  api__result__types_8h__incl.md5  api__result__types_8h_source.html  api__schema_8h.html  api__schema_8h__dep__incl.map  api__schema_8h__dep__incl.md5  api__schema_8h_source.html  (+520 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  (+33 more)
ffi/python/cpp/: CMakeLists.txt  api_entry.cpp
ffi/python/python/: __init__.py  api.py  api_structures.py  example.py
src/: CMakeLists.txt
src/cpp/: api_client.cpp  api_result_types.cpp  error_response.cpp  fetch.cpp
src/cpp/internal/: api_bridge.cpp  fetch.cpp  hash.cpp  http_client.cpp  multi_file.cpp
src/include/: api_client.h  api_result_types.h  config.h  error_code.h  error_response.h  fetch.h  result.h
src/include/internal/: api_bridge.h  api_schema.h  fetch.h  hash.h  http_client.h  multi_file.h
test/: CMakeLists.txt  api_bridge_test.cpp  api_client_test.cpp  fetch_test.cpp  hash_test.cpp  http_client_test.cpp  multi_file_test.cpp
test/mock/: mock_fetch.h  mock_http_client.h
~/.config/nvim/tmp/: README.md~
